--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.1.0"
 [deps]
 Clp = "e2554f3b-3117-50c0-817c-e040a3ddf72d"
 Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
+Dualization = "191a621a-6537-11e9-281d-650236a99e60"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
